services section added

--- a/index.html
+++ b/index.html
@@ -7,8 +7,83 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <nav class="nav-container">
+            <div class="logo">
+                <img src="asset/logo/logo.png" alt="">
+            </div>
+            <div class="menus">
+                <ul>
+                    <li>Home</li>
+                <li>Service</li>
+                <li>About</li>
+                <li>Contact</li>
+                </ul>
+            </div>
+        </nav>
+        <div class="banner-container">
+            <h3 class="banner-title"><span class="digital">Digital</span> Agency You <br>
+                Can Rely Upon !</h3>
+            <p class="banner-desc">Hymenaeos! Omnis arcu vitae? Phasellus irure cupidatat incidunt, semper metus, nibh <br> adipisci assumenda odio, quos, senectus vehicula occaecat, officiis malesuada cras.
+            </p>
+            <div class="btn-container">
+                <button class="btn-primary btn-one">Discover me</button>
+            <button class="btn-primary btn-two">Hire us now</button>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section>
+            <div class="service-container">
+                <div class="column-one">
+                    <button class="btn-primary btn-one">Hire us now</button>
+                    <h3 class="column-one-title">Services We Can Help You With !</h3>
+                    <p class="column-one-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos labore architecto et sequi harum fuga repellendus minima adipisci odio? Reprehenderit maxime iste adipisci iusto dolor, ipsa odit deserunt ad tempora laudantium explicabo dolorem tenetur sint placeat voluptates ullam ut vel.</p>
+                    <ol class="order-list">
+                        <li>Nobis ridiculus cupiditate egestas commodi.</li>
+                        <li>Ipsum dui curabitur dapibuish mollitia.</li>
+                    </ol>
+                    <div class="profile-container">
+                        <div class="profile">
+                            <div>
+                                <img class="author-img" src="asset/image/author.jpg" alt="">
+                            </div>
+                            <div>
+                                <h3 class="author-title">George Smith</h3>
+                                <h3 class="author-title">CEO, Director</h3>
+                            </div>
+                        </div>
+                        <div class="btn-container">
+                            <button class="btn-primary btn-two">Hire Us Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="column-two">
+                    <div class="box-one">
+                        <div class="box-ca-one">
+                            <img class="icon" src="asset/icons/bar-chart.png" alt="">
+                            <h3 class="icon-title">Web Development</h3>
+                        </div>
+                        <div class="box-ca-one">
+                            <img class="icon" src="asset/icons/bar-chart.png" alt="">
+                            <h3 class="icon-title">Web Development</h3>
+                        </div>
+                    </div>
+                    <div class="box-two">
+                        <div class="box-ca-one">
+                            <img class="icon" src="asset/icons/bar-chart.png" alt="">
+                            <h3 class="icon-title">Web Development</h3>
+                        </div>
+                        <div class="box-ca-one">
+                            <img class="icon" src="asset/icons/bar-chart.png" alt="">
+                            <h3 class="icon-title">Web Development</h3>
+                        </div>
+                    </div>
+                     
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
