--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Agency</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/0f93bec475.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -83,7 +84,85 @@
                 </div>
             </div>
         </section>
+        <section class="phone-container">
+            <div class="call-details">
+                <img class="call-icon" src="asset/icons/phone-call.png" alt="">
+                <h4 class="call-title">GET A FREE <br> CONSULTATION
+                  <br>  987 233 0000</h4>
+            </div>
+            <div class="call-desc">
+                <p class="call-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus dolorum earum recusandae eaque nihil hic obcaecati soluta officia? Minus, illum?</p>
+            </div>
+            <div>
+                <button class="call-btn">Make an <br>appointment</button>
+            </div>
+
+        </section>
+        <section class="blog-section">
+            <h3 class="blog-title banner-title"><span class="digital">Blog</span> & News From Us!</h3>
+            <div class="cards">
+                <div class="card-one">
+                    <img class="card-img" src="asset/image/blog-1.jpg" alt="">
+                    <h3 class="card-title">Maxime rhoncus aliquet sint eu accusantium illum.</h3>
+                    <p class="service-desc">Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+                </div>
+                <div class="card-one">
+                    <img class="card-img" src="asset/image/blog-2.jpg" alt="">
+                    <h3 class="card-title">Maxime rhoncus aliquet sint eu accusantium illum.</h3>
+                    <p class="service-desc">Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+                </div>
+                <div class="card-one">
+                    <img class="card-img" src="asset/image/blog-3.jpg" alt="">
+                    <h3 class="card-title">Maxime rhoncus aliquet sint eu accusantium illum.</h3>
+                    <p class="service-desc">Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis, nascetur?.....</p>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <div class="foot-one">
+                <img class="photo" src="asset/logo/logo.png" alt="">
+                <p class="service-desc foot-desc">Auctor blandit dolorem primis eius odit soluta <br>
+                    molestie? Malesuada elementum aut doloremque <br>
+                    labo.</p>
+                    <div class="social">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
+            </div>
+            <div class="foot-two">
+                <h3 class="foot-title">Useful Links
+                </h3>
+                <p class="footer-desc">About us</p>
+                <p class="footer-desc">Careers</p>
+                <p class="footer-desc">News & Artciles</p>
+                <p class="footer-desc">legal Notice</p>
+            </div>
+            <div class="foot-three">
+                <h3 class="foot-title">Supports
+                </h3>
+                <p class="footer-desc">Help Center
+                </p>
+                <p class="footer-desc">Contact Us</p>
+                <p class="footer-desc">FAQ</p>
+                <p class="footer-desc">Parent Community</p>
+            </div>
+            <div class="foot-four">
+                <h3 class="foot-title">Contact Information
+                </h3>
+                <p class="footer-desc">Feel free to contact & reach us !!</p>
+                <p class="footer-desc"><i class="fa-solid fa-location-dot"></i> 3557 Derek Drive, Orlando, Florida </p>
+                <p class="footer-desc"><i class="fa-solid fa-phone-volume"></i> +1(456)657-887</p>
+                <p class="footer-desc"><i class="fa-solid fa-envelope"></i> info@domain.com</p>
+            </div>
+        </div>
+        <div>
+            <div class="hori"></div>
+            <p class="copyright">Copyright &copy 2022 Agence. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
